--- a/app/rutas/contactos/templates/contactos.html
+++ b/app/rutas/contactos/templates/contactos.html
@@ -124,7 +124,9 @@
   <div class="container">
     <div class="row">
       <div class="col-xl-4">
-        <h2>Otros medios de contacto</h2>
+        <h3 class="text-center">Otros medios de contacto</h3>
+
+
         <p><a href="https://www.facebook.com/utic.edu/?locale=es_LA" target="_blank"><i class="fa-brands fa-facebook"></i> Facebook</a></p>
         <p><a href="https://www.instagram.com/frank1_m3" target="_blank"><i class="fa-brands fa-instagram"></i> Instagram</a></p>
         <p><a href="mailto:francomereles24@gmail.com"><i class="fa-solid fa-envelope"></i> Gmail</a></p>
