--- a/app/rutas/referenciales/autor/templates/autor-index.html
+++ b/app/rutas/referenciales/autor/templates/autor-index.html
@@ -33,7 +33,7 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="{{ url_for('contactos.vista_contacto') }}">Contactos</a></li>
 
-        <li class="nav-item"><a class="nav-link" href="{{ url_for('tienda') }}">Tienda</a></li>
+      
        <li class="nav-item">
         
   <a class="nav-link" href="{{ url_for('registrar.registrar_index') }}">Registrar Libro</a>
@@ -69,34 +69,40 @@
           </ul>
         </li>
         
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdown"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Referenciales
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li>
-              <a class="dropdown-item" href="{{ url_for('autor.autorIndex') }}"
-                >Autor</a>
-            </li>
-            <li>
-              <a class="dropdown-item" href="{{ url_for('editorial.editorialIndex') }}"
-                >Editoriales</a
-              >
-            </li>
-            <li>
-              <a class="dropdown-item" href="{{ url_for('tomo.tomoIndex') }}"
-                >Tomo</a
-              >
-            </li>
-          </ul>
-        </li>
+      <li class="nav-item dropdown">
+  <a
+    class="nav-link dropdown-toggle"
+    href="#"
+    id="navbarDropdown"
+    role="button"
+    data-bs-toggle="dropdown"
+    aria-expanded="false"
+  >
+    Referenciales
+  </a>
+  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+    <li>
+      <a class="dropdown-item" href="{{ url_for('autor.autorIndex') }}">Autor</a>
+    </li>
+    <li>
+      <a class="dropdown-item" href="{{ url_for('categoria.categoriaIndex') }}">Categorías</a>
+    </li>
+    <li>
+      <a class="dropdown-item" href="{{ url_for('editorial.editorialIndex') }}">Editoriales</a>
+    </li>
+    <li>
+      <a class="dropdown-item" href="{{ url_for('medida.medidaIndex') }}">Medidas</a>
+    </li>
+    <li>
+      <a class="dropdown-item" href="{{ url_for('tomo.tomoIndex') }}">Tomo</a>
+    </li>
+     <li>
+      <a class="dropdown-item" href="{{ url_for('idioma.idiomaIndex') }}">Idiomas</a>
+    </li>
+    
+  </ul>
+</li>
+
         <li class="nav-item">
           <a class="nav-link" href="#" id="verCarrito"
             ><i class="fa-solid fa-cart-shopping"></i> Carrito (<span
